--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.315.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
